--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_API_URL=https://juswhite.ripplee.net
+VITE_API_URL=https://juswhite.ripplee.net/prod-api
 VITE_QQ_AVATAR_URL=https://q1.qlogo.cn/g
 VITE_DEFAULT_LOCALE=zh-CN
